add support in tags and deleting them over the forms
